SEM2/COD7001/LABS/LAB6/cstn6/src/automated_tests/stress_tests/valid/test_36.lang
var a = 2;
var b = 2;
var c = a + b * 2;