SEM2/COD7001/LABS/LAB6/cstn6/src/automated_tests/stress_tests/invalid/fail_64.lang
var x = 64 
 var y = 2;